# giod

./: CMakeLists.txt  README.md  changelog.md  mod.json
.github/workflows/: build.yml
src/: main.cpp
